CTP_log.txt
Traceback (most recent call last):
  File "./bin/yago-cli.py", line 15, in <module>
    from kbcr.training.data import Data
  File "<frozen importlib._bootstrap>", line 971, in _find_and_load
  File "<frozen importlib._bootstrap>", line 951, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 894, in _find_spec
  File "<frozen importlib._bootstrap_external>", line 1157, in find_spec
  File "<frozen importlib._bootstrap_external>", line 1131, in _get_spec
  File "<frozen importlib._bootstrap_external>", line 1112, in _legacy_get_spec
  File "<frozen importlib._bootstrap>", line 441, in spec_from_loader
  File "<frozen importlib._bootstrap_external>", line 544, in spec_from_file_location
  File "/home/baadalvm/anaconda3/envs/tf/lib/python3.6/site-packages/ctp-0.9-py3.6.egg/kbcr/training/data.py", line 45
    fraction: Optional[float] = 1.0,
           ^
SyntaxError: invalid syntax
